--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,82 +1,37 @@
 version: '3'
 services:
 
-  blog:
+  app:
     build:
       context: .
       dockerfile: ./php/Dockerfile
-    container_name: blog
+    container_name: app
     restart: unless-stopped
     tty: true
     environment:
       MYSQL_HOST: '${MYSQL_HOST}'
       MYSQL_DATABASE: '${MYSQL_DATABASE}'
       MYSQL_ROOT_PASSWORD: '${MYSQL_ROOT_PASSWORD}'
-    working_dir: /var/www/blog
+      SERVICE_NAME: app
+      SERVICE_TAGS: dev
+    working_dir: /var/www
     volumes:
-      - ${APP_DIR}:/var/www/blog
+      - ${APP_DIR}:/var/www
       - ./php/local.ini:/usr/local/etc/php/conf.d/local.ini
     networks:
       - app-network
 
-  admin:
-    build:
-      context: .
-      dockerfile: ./php/Dockerfile
-    container_name: admin
-    restart: unless-stopped
-    tty: true
-    environment:
-      MYSQL_HOST: '${MYSQL_HOST}'
-      MYSQL_DATABASE: '${MYSQL_DATABASE}'
-      MYSQL_ROOT_PASSWORD: '${MYSQL_ROOT_PASSWORD}'
-    working_dir: /var/www/admin
-    volumes:
-      - ${CMS_DIR}:/var/www/admin
-      - ${APP_DIR}:/var/www/blog
-      - ./php/local.ini:/usr/local/etc/php/conf.d/local.ini
-    networks:
-      - app-network
-
-  nginx-ingress:
+  webserver:
     image: nginx:alpine
-    container_name: ingress
+    container_name: webserver
     restart: unless-stopped
     tty: true
     ports:
-      - 80:80
+      - "80:80"
+      - "443:443"
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-      - ./nginx/proxy_header.conf:/etc/nginx/proxy_header.conf
-      - ${APP_DIR}:/var/www/blog
-      - ${CMS_DIR}:/var/www/admin
-    networks:
-      - app-network
-
-  nginx-blog:
-    image: nginx:alpine
-    container_name: blog-server
-    restart: unless-stopped
-    tty: true
-    expose:
-      - 80
-    volumes:
-     - ${APP_DIR}:/var/www/blog
-     - ./nginx/blog/conf.d/:/etc/nginx/conf.d/
-    networks:
-      - app-network
-  
-  nginx-admin:
-    image: nginx:alpine
-    container_name: admin-server
-    restart: unless-stopped
-    tty: true
-    expose:
-      - 80
-    volumes:
-     - ${CMS_DIR}:/var/www/admin
-     - ${APP_DIR}:/var/www/blog
-     - ./nginx/admin/conf.d/:/etc/nginx/conf.d/
+     - ${APP_DIR}:/var/www
+     - ./nginx/conf.d/:/etc/nginx/conf.d/
     networks:
       - app-network
 
@@ -91,8 +46,10 @@ services:
       MYSQL_DATABASE: '${MYSQL_DATABASE}'
       MYSQL_ROOT_PASSWORD: '${MYSQL_ROOT_PASSWORD}'
       MYSQL_ALLOW_ROOT_PASSWORD: ${MYSQL_ALLOW_ROOT_PASSWORD}
+      SERVICE_TAGS: dev
+      SERVICE_NAME: mysql
     volumes:
-      - ${APP_DIR}:/var/www/blog
+      - ${APP_DIR}:/var/www
       - ./mysql/my.cnf:/etc/mysql/my.cnf
       - ./.mysql:/var/lib/mysql
     networks:
